[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uncertainty-imputation"
version = "0.2.1"
description = "Uncertainty-aware iterative imputation for tabular data, guided by acquisition functions."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Romen Samuel Rodis Wabina" }
]
keywords = [
    "imputation",
    "missing-data",
    "uncertainty",
    "machine-learning",
    "bayesian-optimization",
    "mice",
    "active-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.22",
    "pandas>=1.4",
    "scipy>=1.8",
    "scikit-learn>=1.1",
]

[project.optional-dependencies]
xgboost = ["xgboost>=1.7"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]
all = [
    "xgboost>=1.7",
]

[project.urls]
Homepage = "https://github.com/rrwabina/uncertainty-imputation"
Repository = "https://github.com/rrwabina/uncertainty-imputation"
Issues = "https://github.com/rrwabina/uncertainty-imputation/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
uncertainty_imputation = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
